# prism-bootstrap

./: .gitignore  Cargo.toml  README.md  general_project_plan.md  record_start.sh
.github/workflows/: ci.yml  release.yml
example-files/: mmc-pack.json
example-files/lwjgl3ify-variant/: .gitignore
example-files/lwjgl3ify-variant/patches/: me.eigenraven.lwjgl3ify.forgepatches.json  net.minecraft.json
example-files/modern-mc-variant/: mmc-pack.json
example-files/patches/: me.eigenraven.lwjgl3ify.launchargs.json  org.lwjgl3.json
src/: assemble.rs  assets.rs  cli.rs  download.rs  emit.rs  exit.rs  java.rs  load.rs  main.rs  merge.rs  meta.rs  natives.rs  platform.rs  resolve.rs  rules.rs
src/model/: artifact.rs  mod.rs  pack.rs  patch.rs  profile.rs
