[package]
name = "mc-headless-launcher"
version = "0.1.0"
edition = "2024"

[lints.rust]
warnings = "deny"
unsafe_code = "warn"

[lints.clippy]
all = "deny"
pedantic = "deny"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "5"
