[package]
name = "prism-bootstrap"
version = "0.1.0"
edition = "2024"

[lints.rust]
warnings = "deny"
unsafe_code = "warn"

[lints.clippy]
all = "deny"
pedantic = "deny"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
log = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
simple_logger = "5"
zip = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
